[tool.poetry]
name = "letdown"
version = "0.0.1"
description = "It's like a subset of markdown, or something."
authors = ["Charlie Windolf <charliexwindolf@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
mypy = "^0.770"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
